refactor service classes